[package]
name = "switch-ldn-tool"
version = "0.1.0"
authors = ["spacemeowx2 <spacemeowx2@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
hex = "0.4.0"
aes = "0.3.2"
byteorder = "1.3.2"
sha2 = "0.8.0"
aes-ctr = "0.3.0"
